# quantX

./: Cargo.toml  README.md
data/: historical_data.csv
data/market_data/: BTCUSDT-1h-2025-11-04.csv
src/: main.rs
src/backtest/: backtest_ema_crossover.rs  mod.rs
src/data/: bar.rs  downloader.rs  loader.rs  mod.rs  order.rs  simulator.rs
src/models/: order.rs
src/simulation/: mod.rs
src/strategy/: always_buy.rs  always_sell.rs  ema_switch.rs  mod.rs
src/utils/: error.rs
