[package]
name = "quantX"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1"
rand = "0.8"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.11", features = ["json","rustls-tls"] }
zip = "0.6"
chrono = "0.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"

